# odooseek

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  Odoo19_XX装盒项目实施手册.md  README.md  biome.json  clippy.toml  code.md  package.json
.data/: index.dev.db
.githooks/: pre-push
.github/workflows/: ci.yml  e2e.yml
apps/oweb/: .e2e-auth.json  .gitignore  HR_SETTINGS.md  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
crates/odoo-core/: Cargo.toml
crates/odoo-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/odoo-web-server/: Cargo.toml
crates/odoo-web-server/src/: cache.rs  csrf.rs  docs.rs  error.rs  health.rs  helpers.rs  lib.rs  main.rs  menu.rs  menu_enrich.rs  metrics.rs  proxy.rs  rate_limit.rs  report.rs  request_id.rs  session.rs  ws.rs
crates/odoo-web-server/tests/: cache.rs  error.rs  health.rs  integration_test.rs  menu.rs  proxy.rs  proxy_test.rs  report.rs  session.rs  ws.rs
crates/odoo-web-server/tests/common/: mod.rs
docker/: Dockerfile.rust  PGADMIN_SETUP.md  README.md  WSL_部署实操教程.md  docker-compose.yml
docker/19.0/: Dockerfile  培训教程.md
docker/config/: odoo.conf
docker/nginx/: default.conf
docs/: ODOO_CODEGEN_AND_TYPES.md  VISION.md
docs/plans/: BFF_OPTIMIZATION_PLAN.md  CODEGEN_TECHNICAL_DESIGN.md  DEVELOPMENT_PLAN.md  ENHANCEMENT_ROADMAP.md  HR_ALIGNMENT_PLAN.md  MENU_ALIGNMENT_ANALYSIS.md  PHASE1_TECHNICAL_DESIGN.md  PHASE2_TECHNICAL_DESIGN.md  PHASE3_TECHNICAL_DESIGN.md  PHASE4_TECHNICAL_DESIGN.md  PHASE5_TECHNICAL_DESIGN.md  PHASE6_TECHNICAL_DESIGN.md  PHASE7_TECHNICAL_DESIGN.md  PHASE8_TECHNICAL_DESIGN.md  SDK_EXTRACTION_PLAN.md  WIDGET_SYSTEM_DESIGN.md
docs/research/: HOME_MENU_FEASIBILITY_ASSESSMENT.md  ODOOSEEK_BUSINESS_LOGIC_ALIGNMENT.md  ODOOSEEK_BUSINESS_LOGIC_ALIGNMENT_V2.md  ODOO_FRONTEND_MVAM_ALIGNMENT_ANALYSIS.md
docs/reserch/: odoo-architecture-philosophy.md  odoo.md
docs/technologies/: BFF_TECHNICAL_DESIGN.md  ODOOSEEK_MVAM_CHAIN.md  ODOO_ASSETS_SYSTEM_ANALYSIS.md  ODOO_CORE_TECHNICAL_DESIGN.md  ODOO_QWEB_ENGINE_ANALYSIS.md  ODOO_WEB_MODULE_EVALUATION.md  ODOO_WIDGET_SYSTEM_ANALYSIS.md  WEB_MODULE_DEPENDENCIES.md  WEB_MODULE_INHERITANCE.md
(+567 files in other folders)
