[workspace]
resolver = "3"
members = [
    "crates/odoo-core",
    "crates/odoo-web-server",
]
default-members = ["crates/odoo-web-server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"

axum = { version = "0.8", features = ["ws"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json", "cookies", "rustls-tls", "stream",
] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6", features = ["cors", "fs", "compression-br", "compression-gzip", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }

async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

metrics = "0.24"
metrics-exporter-prometheus = "0.16"
