[package]
name = "odoo-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true

[dev-dependencies]
temp-env = "0.3"
