[package]
name = "odoo-web-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
odoo-core = { path = "../odoo-core" }
tokio.workspace = true
axum.workspace = true
reqwest.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
tokio-tungstenite.workspace = true
http = "1.4.1"
percent-encoding = "2"

[dev-dependencies]
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["test-util", "macros"] }
